data/all_generated_tests/raw_wast_tests/block_IncorrectHandlingofControlFlowAcrossModuleBoundaries_158.wast
;; 9. **Block with Loop and Import/Export Interaction**:    - Develop a function that includes a `block` with a loop that interacts with imported and exported functions. Ensure the loop contains both backward (`br`) and forward (`br_if`) branches. The test confirms that both implementations accurately maintain control flow and stack states throughout the loop.

(assert_invalid
  (module
    (import "env" "external_func" (func $external_func (result i32)))
    (export "internal_func" (func $internal_func))
    (func $internal_func (result i32)
      (local $x i32)
      (block $outer (result i32)
        (loop $inner
          (local.set $x (call $external_func))
          (br_if $inner (i32.eq (local.get $x) (i32.const 0)))
          (br $outer (local.get $x))
        )
        (i32.const 1)
      )
    )
  )
  "type mismatch"
)